# voxelens

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: emit.rs
crates/core/: Cargo.toml
crates/core/src/: camera.rs  edges.rs  faces.rs  image.rs  lib.rs  lines.rs  reconstruct.rs  segmentation.rs  texture.rs
crates/core/src/schematic/: mod.rs  schem.rs  varint.rs  voxel_model.rs
crates/core/tests/: reconstruct.rs  segmentation.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: ROADMAP.md
fixtures/: manifest.toml
fixtures/golden/: oak_column_v2.nbt  oak_column_v3.nbt
scripts/: ci-local.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
