[package]
name = "voxelens-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line front-end for voxelens: screenshot in, schematic + debug stage dumps out."

[[bin]]
name = "voxelens"
path = "src/main.rs"

[dependencies]
voxelens-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
