[package]
name = "voxelens-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure, WASM-compatible engine for reconstructing Minecraft schematics from screenshots."

[dependencies]
fastnbt = "2.6"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
