[package]
name = "voxelens-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure, WASM-compatible engine for reconstructing Minecraft schematics from screenshots."

[dependencies]
fastnbt = "2.6"
flate2 = "1"
nalgebra = "0.35"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Only used by tests to decode fixture PNGs into RgbImage; not part of the
# library's runtime deps, so the core stays I/O-free and wasm-clean.
image = { version = "0.25", default-features = false, features = ["png"] }
nalgebra = "0.35"
