[package]
name = "voxelens-wasm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for voxelens-core — run the pipeline in the browser."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
voxelens-core = { workspace = true }
wasm-bindgen = "0.2"
nalgebra = "0.33"
